--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,8 +1,8 @@
-name: Security Pipeline (TP Final)
+name: Pipeline secure coding lab 1
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main" , "feature/**" ]
   pull_request:
     branches: [ "main" ]
 
@@ -100,4 +100,4 @@ jobs:
             snyk-sca-frontend.sarif
             snyk-sast-backend.sarif
             snyk-sast-frontend.sarif
-   
+  
